docusaurus/versioned_docs/version-0.5.0/021_FastKafkaServer.md

<!-- WARNING: THIS FILE WAS AUTOGENERATED! DO NOT EDIT! -->

``` python
import os
from time import sleep

from pydantic import BaseModel

from fastkafka._components.logger import supress_timestamps
from fastkafka._components.test_dependencies import generate_app_in_tmp
from fastkafka.testing import ApacheKafkaBroker
```

``` python
# allows async calls in notebooks

import nest_asyncio
```

``` python
nest_asyncio.apply()
```

``` python
supress_timestamps()
logger = get_logger(__name__, level=20)
logger.info("ok")
```

    [INFO] __main__: ok

------------------------------------------------------------------------

### ServerProcess

>      ServerProcess (app:str, kafka_broker_name:str)

Initialize self. See help(type(self)) for accurate signature.

------------------------------------------------------------------------

### run_fastkafka_server_process

>      run_fastkafka_server_process (app:str=<typer.models.ArgumentInfo object
>                                    at 0x127c0dfd0>,
>                                    kafka_broker:str=<typer.models.OptionInfo
>                                    object at 0x127c0dfa0>)

``` python
print("WARNING: make sure you save the notebook before running this cell\n")

print("Exporting and installing the new version of the CLI command...")
await asyncio.create_subprocess_exec("nbdev_export")
export_process = await asyncio.create_subprocess_exec("nbdev_export")
await export_process.wait()
assert export_process.returncode == 0

install_process = await asyncio.create_subprocess_exec(
    "pip", "install", "-e", "..[all]"
)
await install_process.wait()
assert install_process.returncode == 0

print("ok")
```

    WARNING: make sure you save the notebook before running this cell

    Exporting and installing the new version of the CLI command...
    Defaulting to user installation because normal site-packages is not writeable
    Obtaining file:///work/fastkafka
      Preparing metadata (setup.py): started
      Preparing metadata (setup.py): finished with status 'done'
    Requirement already satisfied: aiokafka>=0.8.0 in /home/kumaran/.local/lib/python3.11/site-packages (from fastkafka==0.3.0rc0) (0.8.0)
    Requirement already satisfied: anyio>=3.0 in /usr/local/lib/python3.11/dist-packages (from fastkafka==0.3.0rc0) (3.6.2)
    Requirement already satisfied: asyncer>=0.0.2 in /home/kumaran/.local/lib/python3.11/site-packages (from fastkafka==0.3.0rc0) (0.0.2)
    Requirement already satisfied: docstring-parser>=0.15 in /home/kumaran/.local/lib/python3.11/site-packages (from fastkafka==0.3.0rc0) (0.15)
    Requirement already satisfied: fastcore>=1.5.27 in /usr/local/lib/python3.11/dist-packages (from fastkafka==0.3.0rc0) (1.5.28)
    Requirement already satisfied: pydantic>=1.9 in /home/kumaran/.local/lib/python3.11/site-packages (from fastkafka==0.3.0rc0) (1.10.6)
    Requirement already satisfied: tqdm>=4.62 in /home/kumaran/.local/lib/python3.11/site-packages (from fastkafka==0.3.0rc0) (4.65.0)
    Requirement already satisfied: typer>=0.7.0 in /home/kumaran/.local/lib/python3.11/site-packages (from fastkafka==0.3.0rc0) (0.7.0)
    Requirement already satisfied: async-timeout in /home/kumaran/.local/lib/python3.11/site-packages (from aiokafka>=0.8.0->fastkafka==0.3.0rc0) (4.0.2)
    Requirement already satisfied: kafka-python>=2.0.2 in /home/kumaran/.local/lib/python3.11/site-packages (from aiokafka>=0.8.0->fastkafka==0.3.0rc0) (2.0.2)
    Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from aiokafka>=0.8.0->fastkafka==0.3.0rc0) (23.0)
    Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.11/dist-packages (from anyio>=3.0->fastkafka==0.3.0rc0) (3.4)
    Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio>=3.0->fastkafka==0.3.0rc0) (1.3.0)
    Requirement already satisfied: pip in /usr/local/lib/python3.11/dist-packages (from fastcore>=1.5.27->fastkafka==0.3.0rc0) (23.0.1)
    Requirement already satisfied: typing-extensions>=4.2.0 in /home/kumaran/.local/lib/python3.11/site-packages (from pydantic>=1.9->fastkafka==0.3.0rc0) (4.5.0)
    Requirement already satisfied: click<9.0.0,>=7.1.1 in /home/kumaran/.local/lib/python3.11/site-packages (from typer>=0.7.0->fastkafka==0.3.0rc0) (8.1.3)

    WARNING: fastkafka 0.3.0rc0 does not provide the extra 'all'

    Installing collected packages: fastkafka
      Attempting uninstall: fastkafka
        Found existing installation: fastkafka 0.3.0rc0
        Uninstalling fastkafka-0.3.0rc0:
          Successfully uninstalled fastkafka-0.3.0rc0
      Running setup.py develop for fastkafka
    Successfully installed fastkafka-0.3.0rc0
    ok

------------------------------------------------------------------------

### terminate_asyncio_process

>      terminate_asyncio_process (p:asyncio.subprocess.Process)

``` python
listener_port = 9099
with generate_app_in_tmp() as app:
    async with ApacheKafkaBroker(listener_port=listener_port) as bootstrap_server:
        os.environ["KAFKA_HOSTNAME"], os.environ["KAFKA_PORT"] = bootstrap_server.split(
            ":"
        )
        proc = await asyncio.create_subprocess_exec(
            "run_fastkafka_server_process",
            "--kafka-broker",
            "localhost",
            app,
            stdout=asyncio.subprocess.PIPE,
        )
        sleep(5)
        await terminate_asyncio_process(proc)
        outputs, _ = await proc.communicate()

        print(outputs.decode("utf-8"))
        assert proc.returncode == 0
```

    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: But not exported to PATH, exporting...
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._components.test_dependencies: But not exported to PATH, exporting...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9099
    [INFO] __main__: terminate_asyncio_process(): Terminating the process 820528...
    [INFO] __main__: terminate_asyncio_process(): Process 820528 terminated.
    [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:9099'
    [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:9099', 'group_id': '127.0.0.1:9099_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:9099', 'group_id': '127.0.0.1:9099_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:9099_group' (generation 1) with member_id aiokafka-0.8.0-7bb3c9db-3b1a-4a75-b0cb-b520e279143f
    [INFO] aiokafka.consumer.group_coordinator: Elected group leader -- performing partition assignments using roundrobin
    [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:9099_group' (generation 1) with member_id aiokafka-0.8.0-9cbdeb88-b415-46e1-a4b4-b5a58ca34914
    [INFO] aiokafka.consumer.group_coordinator: Metadata for topic has changed from {} to {'training_data': 1, 'realitime_data': 1}. 
    [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:9099_group with generation 1
    [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='training_data', partition=0)} for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:9099_group with generation 1
    [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='realitime_data', partition=0)} for group 127.0.0.1:9099_group
    [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.

    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 820069...

    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 820069 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 819697...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 819697 terminated.

------------------------------------------------------------------------

### run_fastkafka_server

>      run_fastkafka_server (num_workers:int, app:str, kafka_broker:str)

------------------------------------------------------------------------

### run_in_process

>      run_in_process (target:Callable[...,Any])

``` python
listener_port = 10000
async with ApacheKafkaBroker(listener_port=listener_port) as bootstrap_server:
    os.environ["KAFKA_HOSTNAME"], os.environ["KAFKA_PORT"] = bootstrap_server.split(":")

    with generate_app_in_tmp() as app:

        def run_fastkafka_server_test():
            asyncio.run(run_fastkafka_server(4, app, "localhost"))

        with run_in_process(run_fastkafka_server_test) as p:
            sleep(15)

        assert p.exitcode == 0, p.exitcode
        p.close()

print("ok")
```

    [INFO] fastkafka._components.test_dependencies: Java is already installed.
    [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:10000
    [821401]: [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [821397]: [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [821403]: [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [821403]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821401]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821397]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821399]: [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [821399]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821399]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821397]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821401]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821403]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821397]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821401]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821403]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821399]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821399]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821401]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821397]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821403]: [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'bootstrap_servers': '127.0.0.1:10000', 'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'max_poll_records': 100}
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821397]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [821397]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821403]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [821403]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821401]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [821401]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821399]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [821399]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821397]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [821397]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.

    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821401]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [821401]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821397]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821399]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [821399]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [821403]: [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [821403]: [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [821401]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821401]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821403]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821403]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821397]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821397]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821403]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821403]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821401]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821401]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821397]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821403]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821401]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821397]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821399]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821401]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821403]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821397]: [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-45bae167-66a6-4d71-aea0-bea04ee56fbf
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Elected group leader -- performing partition assignments using roundrobin
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-82fa2791-a36a-422c-a282-f8e50249e035
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-c9bb4cdc-60bd-4d64-b8f5-43c56a0acd51
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-a7659ced-540a-46ca-a6a5-c6b572e01481
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-3267a81b-1bc6-4980-8b9f-8cbb2d9438f3
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-30395922-d61f-41b7-b7e5-4c023d7cb6fe

    [821401]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-94136590-f3a6-46e6-9741-07514423c09a
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-758866b0-b100-4a34-9f50-32143f066ac5
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Metadata for topic has changed from {} to {'realitime_data': 1, 'training_data': 1}. 
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='realitime_data', partition=0)} for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [821397]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='training_data', partition=0)} for group 127.0.0.1:10000_group
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821403]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821401]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [821399]: [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    Starting process cleanup, this may take a few seconds...
    [INFO] __main__: terminate_asyncio_process(): Terminating the process 821397...
    [INFO] __main__: terminate_asyncio_process(): Terminating the process 821399...
    [INFO] __main__: terminate_asyncio_process(): Terminating the process 821401...
    [INFO] __main__: terminate_asyncio_process(): Terminating the process 821403...
    [821403]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821403]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821403]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [INFO] __main__: terminate_asyncio_process(): Process 821403 terminated.
    [821401]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821401]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821401]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [821397]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [821397]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821397]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [821399]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [821399]: [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [821399]: [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [INFO] __main__: terminate_asyncio_process(): Process 821401 terminated.
    [INFO] __main__: terminate_asyncio_process(): Process 821397 terminated.
    [INFO] __main__: terminate_asyncio_process(): Process 821399 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 820933...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 820933 terminated.
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 820561...
    [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 820561 terminated.
    ok
