docusaurus/versioned_docs/version-0.6.0/021_FastKafkaServer.md

<!-- WARNING: THIS FILE WAS AUTOGENERATED! DO NOT EDIT! -->

``` python
import os
from time import sleep

from pydantic import BaseModel

from fastkafka._components.test_dependencies import generate_app_in_tmp
from fastkafka.testing import ApacheKafkaBroker
```

``` python
# allows async calls in notebooks

import nest_asyncio
```

``` python
nest_asyncio.apply()
```

``` python
# supress_timestamps()
# logger = get_logger(__name__, level=20)
logger.info("ok")
```

    23-05-12 13:15:31.504 [INFO] __main__: ok

------------------------------------------------------------------------

### ServerProcess

>      ServerProcess (app:str, kafka_broker_name:str)

Initialize self. See help(type(self)) for accurate signature.

------------------------------------------------------------------------

### run_fastkafka_server_process

>      run_fastkafka_server_process (app:str=<typer.models.ArgumentInfo object
>                                    at 0x7fcd9fba4250>,
>                                    kafka_broker:str=<typer.models.OptionInfo
>                                    object at 0x7fcda088dd50>)

``` python
print("WARNING: make sure you save the notebook before running this cell\n")

print("Exporting and installing the new version of the CLI command...")
await asyncio.create_subprocess_exec("nbdev_export")
export_process = await asyncio.create_subprocess_exec("nbdev_export")
await export_process.wait()
assert export_process.returncode == 0

install_process = await asyncio.create_subprocess_exec(
    "pip", "install", "-e", "..[all]"
)
await install_process.wait()
assert install_process.returncode == 0

print("ok")
```

    WARNING: make sure you save the notebook before running this cell

    Exporting and installing the new version of the CLI command...
    Defaulting to user installation because normal site-packages is not writeable
    Obtaining file:///work/fastkafka
      Preparing metadata (setup.py): started
      Preparing metadata (setup.py): finished with status 'done'

    WARNING: fastkafka 0.6.0rc0 does not provide the extra 'all'

    Requirement already satisfied: aiokafka>=0.8.0 in /home/davor/.local/lib/python3.11/site-packages (from fastkafka==0.6.0rc0) (0.8.0)
    Requirement already satisfied: anyio>=3.0 in /usr/local/lib/python3.11/dist-packages (from fastkafka==0.6.0rc0) (3.6.2)
    Requirement already satisfied: asyncer>=0.0.2 in /home/davor/.local/lib/python3.11/site-packages (from fastkafka==0.6.0rc0) (0.0.2)
    Requirement already satisfied: docstring-parser>=0.15 in /home/davor/.local/lib/python3.11/site-packages (from fastkafka==0.6.0rc0) (0.15)
    Requirement already satisfied: nest-asyncio>=1.5.6 in /usr/local/lib/python3.11/dist-packages (from fastkafka==0.6.0rc0) (1.5.6)
    Requirement already satisfied: pydantic>=1.9 in /home/davor/.local/lib/python3.11/site-packages (from fastkafka==0.6.0rc0) (1.10.7)
    Requirement already satisfied: tqdm>=4.62 in /home/davor/.local/lib/python3.11/site-packages (from fastkafka==0.6.0rc0) (4.65.0)
    Requirement already satisfied: typer>=0.7.0 in /home/davor/.local/lib/python3.11/site-packages (from fastkafka==0.6.0rc0) (0.7.0)
    Requirement already satisfied: async-timeout in /home/davor/.local/lib/python3.11/site-packages (from aiokafka>=0.8.0->fastkafka==0.6.0rc0) (4.0.2)
    Requirement already satisfied: kafka-python>=2.0.2 in /home/davor/.local/lib/python3.11/site-packages (from aiokafka>=0.8.0->fastkafka==0.6.0rc0) (2.0.2)
    Requirement already satisfied: packaging in /usr/local/lib/python3.11/dist-packages (from aiokafka>=0.8.0->fastkafka==0.6.0rc0) (23.0)
    Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.11/dist-packages (from anyio>=3.0->fastkafka==0.6.0rc0) (3.4)
    Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.11/dist-packages (from anyio>=3.0->fastkafka==0.6.0rc0) (1.3.0)
    Requirement already satisfied: typing-extensions>=4.2.0 in /home/davor/.local/lib/python3.11/site-packages (from pydantic>=1.9->fastkafka==0.6.0rc0) (4.5.0)
    Requirement already satisfied: click<9.0.0,>=7.1.1 in /home/davor/.local/lib/python3.11/site-packages (from typer>=0.7.0->fastkafka==0.6.0rc0) (8.1.3)
    Installing collected packages: fastkafka
      Attempting uninstall: fastkafka
        Found existing installation: fastkafka 0.6.0rc0
        Uninstalling fastkafka-0.6.0rc0:
          Successfully uninstalled fastkafka-0.6.0rc0
      Running setup.py develop for fastkafka
    Successfully installed fastkafka-0.6.0rc0
    ok


    [notice] A new release of pip is available: 23.0.1 -> 23.1.2
    [notice] To update, run: python3 -m pip install --upgrade pip

------------------------------------------------------------------------

### terminate_asyncio_process

>      terminate_asyncio_process (p:asyncio.subprocess.Process)

``` python
listener_port = 9099
with generate_app_in_tmp() as app:
    async with ApacheKafkaBroker(listener_port=listener_port) as bootstrap_server:
        os.environ["KAFKA_HOSTNAME"], os.environ["KAFKA_PORT"] = bootstrap_server.split(
            ":"
        )
        proc = await asyncio.create_subprocess_exec(
            "run_fastkafka_server_process",
            "--kafka-broker",
            "localhost",
            app,
            stdout=asyncio.subprocess.PIPE,
        )
        sleep(5)
        await terminate_asyncio_process(proc)
        outputs, _ = await proc.communicate()

        print(outputs.decode("utf-8"))
        assert proc.returncode == 0
```

    23-05-12 13:15:47.644 [INFO] fastkafka._components.test_dependencies: Java is already installed.
    23-05-12 13:15:47.645 [INFO] fastkafka._components.test_dependencies: But not exported to PATH, exporting...
    23-05-12 13:15:47.646 [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    23-05-12 13:15:47.647 [INFO] fastkafka._components.test_dependencies: But not exported to PATH, exporting...
    23-05-12 13:15:47.647 [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    23-05-12 13:15:48.375 [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    23-05-12 13:15:50.279 [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:9099
    23-05-12 13:15:55.286 [INFO] __main__: terminate_asyncio_process(): Terminating the process 3741...
    23-05-12 13:15:56.446 [INFO] __main__: terminate_asyncio_process(): Process 3741 terminated.
    23-05-12 13:15:50.735 [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:9099'
    23-05-12 13:15:50.735 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    23-05-12 13:15:50.762 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    23-05-12 13:15:50.769 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    23-05-12 13:15:50.775 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:9099'}'
    23-05-12 13:15:50.780 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    23-05-12 13:15:50.780 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:9099_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:9099', 'max_poll_records': 100}
    23-05-12 13:15:50.781 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    23-05-12 13:15:50.781 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:9099_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:9099', 'max_poll_records': 100}
    23-05-12 13:15:50.787 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    23-05-12 13:15:50.787 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    23-05-12 13:15:50.787 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    23-05-12 13:15:50.787 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    23-05-12 13:15:50.792 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    23-05-12 13:15:50.792 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    23-05-12 13:15:50.792 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    23-05-12 13:15:50.792 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    23-05-12 13:15:50.801 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:50.842 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:50.843 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:50.854 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:50.948 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:50.952 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:50.957 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:50.961 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.057 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.061 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.066 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.068 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.165 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.167 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.171 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.174 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.271 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.275 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.277 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.280 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.378 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.382 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.384 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.386 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.485 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.488 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.489 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.491 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.592 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.594 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.595 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.597 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.698 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.700 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    23-05-12 13:15:51.701 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    23-05-12 13:15:51.703 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    23-05-12 13:15:51.811 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:51.811 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:9099_group
    23-05-12 13:15:51.811 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:51.811 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:51.811 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:9099_group
    23-05-12 13:15:51.811 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:51.816 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:51.817 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:51.920 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:51.920 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:51.920 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:51.921 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:51.921 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:51.921 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.025 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.025 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.026 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.026 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.026 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.027 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.130 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.130 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.130 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.130 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.131 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.131 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.235 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.235 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.235 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.235 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.236 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.236 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.339 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.339 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.339 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.339 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.340 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.340 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.443 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.443 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.443 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.443 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.444 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.444 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.546 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.547 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.547 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.547 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.548 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.548 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.652 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.652 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.652 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.652 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.653 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.653 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.756 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.756 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.756 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.756 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.757 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.757 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.859 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.859 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.860 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.860 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.860 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.861 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.964 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.964 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.964 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:52.964 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:52.965 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:52.965 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.068 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.068 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.068 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.068 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.069 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.069 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.173 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.173 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.173 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.173 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.173 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.174 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.277 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.277 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.278 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.278 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.279 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.279 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.381 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.382 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.382 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.382 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.382 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.383 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.485 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.486 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.486 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.486 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.486 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.487 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.590 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.590 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.590 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.590 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.591 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.591 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.695 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.695 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.695 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.695 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.696 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.696 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.798 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.798 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.798 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.798 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.799 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.799 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.902 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.902 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.902 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:53.902 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:53.903 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:53.903 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.006 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.006 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.006 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.006 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.006 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.007 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.109 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.110 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.110 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.110 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.111 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.111 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.213 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.214 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.214 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.214 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.215 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.215 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.317 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.317 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.317 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.317 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.318 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.318 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.421 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.421 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.421 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.421 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.422 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.422 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.525 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.525 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.526 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.526 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.526 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.526 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.629 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.629 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.630 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.630 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.630 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.630 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.733 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.733 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.733 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.733 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.734 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.734 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.837 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.837 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.837 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.837 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.837 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.838 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.940 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.940 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.940 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:54.940 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:54.941 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:54.941 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.044 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.044 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.045 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.045 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.045 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.045 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.148 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.149 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.149 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.149 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.149 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.150 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.252 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.252 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.253 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.253 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.253 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.253 [WARNING] aiokafka.consumer.group_coordinator: Marking the coordinator dead (node 0)for group 127.0.0.1:9099_group.
    23-05-12 13:15:55.355 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.355 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.355 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:9099_group
    23-05-12 13:15:55.356 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:9099_group
    23-05-12 13:15:55.384 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:9099_group' (generation 1) with member_id aiokafka-0.8.0-73ad005a-cabe-4301-8f89-9eb04ac681b2
    23-05-12 13:15:55.384 [INFO] aiokafka.consumer.group_coordinator: Elected group leader -- performing partition assignments using roundrobin
    23-05-12 13:15:55.384 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:9099_group' (generation 1) with member_id aiokafka-0.8.0-20335c1a-a6d3-4b85-a6a9-8ffda2fa3d30
    23-05-12 13:15:55.386 [INFO] aiokafka.consumer.group_coordinator: Metadata for topic has changed from {} to {'realitime_data': 1, 'training_data': 1}. 
    23-05-12 13:15:55.431 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:9099_group with generation 1
    23-05-12 13:15:55.432 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='training_data', partition=0)} for group 127.0.0.1:9099_group
    23-05-12 13:15:55.432 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:9099_group with generation 1
    23-05-12 13:15:55.432 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='realitime_data', partition=0)} for group 127.0.0.1:9099_group
    23-05-12 13:15:56.350 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    23-05-12 13:15:56.351 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    23-05-12 13:15:56.351 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    23-05-12 13:15:56.353 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    23-05-12 13:15:56.354 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    23-05-12 13:15:56.354 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.

    23-05-12 13:15:56.447 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 3176...

    23-05-12 13:15:58.201 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 3176 terminated.
    23-05-12 13:15:58.201 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 2797...
    23-05-12 13:15:59.550 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 2797 terminated.

------------------------------------------------------------------------

### run_fastkafka_server

>      run_fastkafka_server (num_workers:int, app:str, kafka_broker:str)

------------------------------------------------------------------------

### run_in_process

>      run_in_process (target:Callable[...,Any])

``` python
listener_port = 10000
async with ApacheKafkaBroker(listener_port=listener_port) as bootstrap_server:
    os.environ["KAFKA_HOSTNAME"], os.environ["KAFKA_PORT"] = bootstrap_server.split(":")

    with generate_app_in_tmp() as app:

        def run_fastkafka_server_test():
            asyncio.run(run_fastkafka_server(4, app, "localhost"))

        with run_in_process(run_fastkafka_server_test) as p:
            sleep(15)

        assert p.exitcode == 0, p.exitcode
        p.close()

print("ok")
```

    23-05-12 13:15:59.593 [INFO] fastkafka._components.test_dependencies: Java is already installed.
    23-05-12 13:15:59.594 [INFO] fastkafka._components.test_dependencies: Kafka is installed.
    23-05-12 13:15:59.595 [INFO] fastkafka._testing.apache_kafka_broker: Starting zookeeper...
    23-05-12 13:16:00.327 [INFO] fastkafka._testing.apache_kafka_broker: Starting kafka...
    23-05-12 13:16:02.192 [INFO] fastkafka._testing.apache_kafka_broker: Local Kafka broker up and running on 127.0.0.1:10000
    [4782]: 23-05-12 13:16:02.847 [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [4782]: 23-05-12 13:16:02.847 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4780]: 23-05-12 13:16:02.851 [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [4780]: 23-05-12 13:16:02.851 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4784]: 23-05-12 13:16:02.852 [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [4784]: 23-05-12 13:16:02.852 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4786]: 23-05-12 13:16:02.853 [INFO] fastkafka._application.app: set_kafka_broker() : Setting bootstrap_servers value to '127.0.0.1:10000'
    [4786]: 23-05-12 13:16:02.853 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4786]: 23-05-12 13:16:02.882 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4784]: 23-05-12 13:16:02.883 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4780]: 23-05-12 13:16:02.883 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4782]: 23-05-12 13:16:02.883 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4784]: 23-05-12 13:16:02.887 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4786]: 23-05-12 13:16:02.887 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4780]: 23-05-12 13:16:02.888 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4782]: 23-05-12 13:16:02.889 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4786]: 23-05-12 13:16:02.891 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4784]: 23-05-12 13:16:02.892 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4780]: 23-05-12 13:16:02.892 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4782]: 23-05-12 13:16:02.893 [INFO] fastkafka._application.app: _create_producer() : created producer using the config: '{'bootstrap_servers': '127.0.0.1:10000'}'
    [4786]: 23-05-12 13:16:02.894 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4786]: 23-05-12 13:16:02.894 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4786]: 23-05-12 13:16:02.895 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4786]: 23-05-12 13:16:02.895 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4780]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4780]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4780]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4780]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4784]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4784]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4784]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4784]: 23-05-12 13:16:02.896 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4782]: 23-05-12 13:16:02.897 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4782]: 23-05-12 13:16:02.897 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4782]: 23-05-12 13:16:02.897 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() starting...
    [4782]: 23-05-12 13:16:02.897 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer created using the following parameters: {'group_id': '127.0.0.1:10000_group', 'auto_offset_reset': 'earliest', 'bootstrap_servers': '127.0.0.1:10000', 'max_poll_records': 100}
    [4782]: 23-05-12 13:16:02.902 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4782]: 23-05-12 13:16:02.902 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [4782]: 23-05-12 13:16:02.902 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [4782]: 23-05-12 13:16:02.902 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4786]: 23-05-12 13:16:02.899 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4786]: 23-05-12 13:16:02.899 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [4786]: 23-05-12 13:16:02.900 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [4786]: 23-05-12 13:16:02.900 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4784]: 23-05-12 13:16:02.900 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4784]: 23-05-12 13:16:02.900 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})

    [4784]: 23-05-12 13:16:02.900 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [4784]: 23-05-12 13:16:02.900 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4780]: 23-05-12 13:16:02.900 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4780]: 23-05-12 13:16:02.900 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [4780]: 23-05-12 13:16:02.900 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [4780]: 23-05-12 13:16:02.901 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4784]: 23-05-12 13:16:02.905 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4784]: 23-05-12 13:16:02.905 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [4784]: 23-05-12 13:16:02.905 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [4784]: 23-05-12 13:16:02.905 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4784]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:02.905 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4780]: 23-05-12 13:16:02.905 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [4780]: 23-05-12 13:16:02.905 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [4780]: 23-05-12 13:16:02.905 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4780]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:02.906 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4786]: 23-05-12 13:16:02.906 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'realitime_data'})
    [4786]: 23-05-12 13:16:02.906 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'realitime_data'}
    [4786]: 23-05-12 13:16:02.906 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4786]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:02.907 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer started.
    [4782]: 23-05-12 13:16:02.907 [INFO] aiokafka.consumer.subscription_state: Updating subscribed topics to: frozenset({'training_data'})
    [4782]: 23-05-12 13:16:02.907 [INFO] aiokafka.consumer.consumer: Subscribed to topic(s): {'training_data'}
    [4782]: 23-05-12 13:16:02.907 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer subscribed.
    [4782]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:02.913 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:02.918 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4784]: 23-05-12 13:16:02.918 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4782]: 23-05-12 13:16:02.918 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:02.918 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4786]: 23-05-12 13:16:02.918 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4786]: 23-05-12 13:16:02.960 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:02.960 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:02.960 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:02.964 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.019 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.020 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.020 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.020 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.021 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.022 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.023 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4786]: 23-05-12 13:16:03.021 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4784]: 23-05-12 13:16:03.023 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.023 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.062 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.064 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.064 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.067 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.067 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.070 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.123 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.124 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.125 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.125 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.125 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.126 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.126 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4784]: 23-05-12 13:16:03.126 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4784]: 23-05-12 13:16:03.127 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization

    [4786]: 23-05-12 13:16:03.126 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.168 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.168 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.171 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.172 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.173 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.177 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.228 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.228 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.228 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.228 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.229 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4784]: 23-05-12 13:16:03.229 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4786]: 23-05-12 13:16:03.230 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.231 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.231 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.231 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.273 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.275 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.276 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.277 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.280 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.282 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.331 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.332 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.333 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.333 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.333 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.334 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.334 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.334 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.336 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.335 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.378 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.380 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.380 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.382 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.385 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.388 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.436 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.436 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.437 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.437 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.437 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.438 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.438 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.439 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4784]: 23-05-12 13:16:03.439 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.440 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.483 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.484 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.486 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.486 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.491 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.492 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.540 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.540 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.541 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.541 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.542 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.542 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError

    [4784]: 23-05-12 13:16:03.542 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4786]: 23-05-12 13:16:03.542 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.543 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.544 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.588 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.589 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.590 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.591 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.596 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.598 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.643 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.644 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.644 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.645 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.645 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.645 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.646 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.646 [ERROR] aiokafka.cluster: Topic realitime_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.647 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.648 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.692 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.693 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.695 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.695 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.701 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.704 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.747 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.748 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.749 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4782]: 23-05-12 13:16:03.749 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.749 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.750 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.750 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.750 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.750 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.753 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.797 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.798 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.799 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4780]: 23-05-12 13:16:03.801 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4786]: 23-05-12 13:16:03.807 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.809 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.851 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.852 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4784]: 23-05-12 13:16:03.852 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.853 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4786]: 23-05-12 13:16:03.854 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4784]: 23-05-12 13:16:03.853 [ERROR] aiokafka.cluster: Topic training_data not found in cluster metadata
    [4782]: 23-05-12 13:16:03.854 [WARNING] aiokafka.cluster: Topic training_data is not available during auto-create initialization
    [4784]: 23-05-12 13:16:03.854 [WARNING] aiokafka.cluster: Topic realitime_data is not available during auto-create initialization
    [4782]: 23-05-12 13:16:03.856 [ERROR] aiokafka.consumer.group_coordinator: Group Coordinator Request failed: [Error 15] CoordinatorNotAvailableError
    [4780]: 23-05-12 13:16:03.906 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.906 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.906 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.907 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.907 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.907 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.914 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.914 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.914 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.934 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-755f3bc2-d2ca-4062-9d8f-89968c4b49ec

    [4786]: 23-05-12 13:16:03.935 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-d700f6b6-54d6-4f4a-8914-c7f97654cf5c
    [4780]: 23-05-12 13:16:03.937 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 1) with member_id aiokafka-0.8.0-b7229ef6-d1b0-493e-a8de-e0a27e3a46c4
    [4780]: 23-05-12 13:16:03.937 [INFO] aiokafka.consumer.group_coordinator: Elected group leader -- performing partition assignments using roundrobin
    [4780]: 23-05-12 13:16:03.939 [INFO] aiokafka.consumer.group_coordinator: Metadata for topic has changed from {} to {'training_data': 1, 'realitime_data': 1}. 
    [4782]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.959 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:03.970 [INFO] aiokafka.consumer.group_coordinator: Discovered coordinator 0 for group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:03.970 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions set() for group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:03.970 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.987 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [4780]: 23-05-12 13:16:03.987 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='realitime_data', partition=0)} for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:03.988 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [4786]: 23-05-12 13:16:03.988 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:03.989 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 1
    [4780]: 23-05-12 13:16:03.989 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='training_data', partition=0)} for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:06.994 [WARNING] aiokafka.consumer.group_coordinator: Heartbeat failed for group 127.0.0.1:10000_group because it is rebalancing
    [4780]: 23-05-12 13:16:06.994 [WARNING] aiokafka.consumer.group_coordinator: Heartbeat failed for group 127.0.0.1:10000_group because it is rebalancing
    [4780]: 23-05-12 13:16:06.994 [WARNING] aiokafka.consumer.group_coordinator: Heartbeat failed for group 127.0.0.1:10000_group because it is rebalancing
    [4786]: 23-05-12 13:16:06.994 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions frozenset() for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:06.994 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:07.006 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions frozenset({TopicPartition(topic='training_data', partition=0)}) for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:07.006 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:07.008 [INFO] aiokafka.consumer.group_coordinator: Revoking previously assigned partitions frozenset({TopicPartition(topic='realitime_data', partition=0)}) for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:07.008 [INFO] aiokafka.consumer.group_coordinator: (Re-)joining group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:07.010 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-f69731ec-8adc-4e6d-a379-ba0891db4e8f
    [4784]: 23-05-12 13:16:07.010 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-4fa96b00-1b4b-40cf-828c-e4fba93f67bd
    [4782]: 23-05-12 13:16:07.011 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-446acc34-daa8-46c4-a22f-7384ba6be175
    [4780]: 23-05-12 13:16:07.012 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-755f3bc2-d2ca-4062-9d8f-89968c4b49ec
    [4784]: 23-05-12 13:16:07.012 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-e340368d-167f-4eff-ac69-13eb972cd1e1
    [4786]: 23-05-12 13:16:07.013 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-2d4b4714-c10f-4ad1-8a05-08c397342e59
    [4786]: 23-05-12 13:16:07.013 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-d700f6b6-54d6-4f4a-8914-c7f97654cf5c
    [4780]: 23-05-12 13:16:07.014 [INFO] aiokafka.consumer.group_coordinator: Joined group '127.0.0.1:10000_group' (generation 2) with member_id aiokafka-0.8.0-b7229ef6-d1b0-493e-a8de-e0a27e3a46c4
    [4780]: 23-05-12 13:16:07.014 [INFO] aiokafka.consumer.group_coordinator: Elected group leader -- performing partition assignments using roundrobin
    [4782]: 23-05-12 13:16:07.017 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4782]: 23-05-12 13:16:07.017 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [4784]: 23-05-12 13:16:07.018 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4784]: 23-05-12 13:16:07.018 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='training_data', partition=0)} for group 127.0.0.1:10000_group
    [4782]: 23-05-12 13:16:07.019 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4782]: 23-05-12 13:16:07.019 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions {TopicPartition(topic='realitime_data', partition=0)} for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:07.019 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4780]: 23-05-12 13:16:07.019 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [4780]: 23-05-12 13:16:07.021 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4780]: 23-05-12 13:16:07.021 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group

    [4784]: 23-05-12 13:16:07.019 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4784]: 23-05-12 13:16:07.020 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:07.020 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4786]: 23-05-12 13:16:07.020 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    [4786]: 23-05-12 13:16:07.021 [INFO] aiokafka.consumer.group_coordinator: Successfully synced group 127.0.0.1:10000_group with generation 2
    [4786]: 23-05-12 13:16:07.021 [INFO] aiokafka.consumer.group_coordinator: Setting newly assigned partitions set() for group 127.0.0.1:10000_group
    Starting process cleanup, this may take a few seconds...
    23-05-12 13:16:17.469 [INFO] __main__: terminate_asyncio_process(): Terminating the process 4780...
    23-05-12 13:16:17.470 [INFO] __main__: terminate_asyncio_process(): Terminating the process 4782...
    23-05-12 13:16:17.471 [INFO] __main__: terminate_asyncio_process(): Terminating the process 4784...
    23-05-12 13:16:17.472 [INFO] __main__: terminate_asyncio_process(): Terminating the process 4786...
    [4782]: 23-05-12 13:16:18.509 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4782]: 23-05-12 13:16:18.509 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4782]: 23-05-12 13:16:18.509 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [4782]: 23-05-12 13:16:18.510 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4782]: 23-05-12 13:16:18.510 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4782]: 23-05-12 13:16:18.510 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [4784]: 23-05-12 13:16:18.512 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4784]: 23-05-12 13:16:18.512 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4784]: 23-05-12 13:16:18.512 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [4784]: 23-05-12 13:16:18.512 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4784]: 23-05-12 13:16:18.513 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4784]: 23-05-12 13:16:18.513 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    23-05-12 13:16:18.605 [INFO] __main__: terminate_asyncio_process(): Process 4784 terminated.
    23-05-12 13:16:18.606 [INFO] __main__: terminate_asyncio_process(): Process 4782 terminated.
    [4780]: 23-05-12 13:16:18.633 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4786]: 23-05-12 13:16:18.633 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4786]: 23-05-12 13:16:18.634 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4786]: 23-05-12 13:16:18.634 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [4780]: 23-05-12 13:16:18.633 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4780]: 23-05-12 13:16:18.633 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [4780]: 23-05-12 13:16:18.634 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4780]: 23-05-12 13:16:18.634 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4780]: 23-05-12 13:16:18.634 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    [4786]: 23-05-12 13:16:18.636 [INFO] aiokafka.consumer.group_coordinator: LeaveGroup request succeeded
    [4786]: 23-05-12 13:16:18.636 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop(): Consumer stopped.
    [4786]: 23-05-12 13:16:18.636 [INFO] fastkafka._components.aiokafka_consumer_loop: aiokafka_consumer_loop() finished.
    23-05-12 13:16:18.727 [INFO] __main__: terminate_asyncio_process(): Process 4780 terminated.
    23-05-12 13:16:18.730 [INFO] __main__: terminate_asyncio_process(): Process 4786 terminated.
    23-05-12 13:16:18.738 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 4184...
    23-05-12 13:16:20.485 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 4184 terminated.
    23-05-12 13:16:20.486 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Terminating the process 3805...
    23-05-12 13:16:21.834 [INFO] fastkafka._components._subprocess: terminate_asyncio_process(): Process 3805 terminated.
    ok
